remove fixed width and apply vertical align top

--- a/layout.css
+++ b/layout.css
@@ -8,15 +8,12 @@ div {
 }
 
 .row {
-    width: 1500px;
-    float: left;
-    overflow: auto;
     white-space: nowrap;
 }
 
 .side {
-	display: inline-block;
-    float: left;
+    display: inline-block;
+    vertical-align: top;
 	padding: 0 15px 30px 0;
 }
 
